classDiagram
    direction TB

%% --- CORE SERVICES ---
    class ExpenseCoreService {
        -StorageStrategy storage
        -MetadataRepository repository
        -RuleEngine rules
        +createExpense(NewExpenseDTO) UUID
        +uploadDocument(UUID, DocType, InputStream)
    }

%% --- STRATEGY PATTERN (STORAGE) ---
    class StorageStrategy {
        <<Interface>>
        +createDirectory(String relativePath)
        +saveStream(String fullPath, InputStream stream)
        +exists(String path)
    }

    class LocalStorageStrategy {
        +createDirectory(path)
        +saveStream(path, stream)
    }

    class RemoteStorageStrategy {
        -String sshHost
        -String sshUser
        +createDirectory(path)
        +saveStream(path, stream)
    }

%% --- REPOSITORY PATTERN (METADATA) ---
    class MetadataRepository {
        <<Interface>>
        +save(ExpenseEntry)
        +findById(UUID) ExpenseEntry
        +updateStatus(UUID, ValidationStatus)
    }

    class JsonMetadataRepository {
        -File jsonDbFile
    }

    class SqlMetadataRepository {
        -Connection dbConnection
    }

%% --- DOMAIN ---
    class ExpenseEntry {
        +UUID id
        +String fullPath
        +String description
        +ValidationStatus status
        +Map~DocType, DocumentSlot~ slots
    }

%% --- RELATIONSHIPS ---
    ExpenseCoreService --> StorageStrategy
    ExpenseCoreService --> MetadataRepository

    LocalStorageStrategy ..|> StorageStrategy
    RemoteStorageStrategy ..|> StorageStrategy

    JsonMetadataRepository ..|> MetadataRepository
    SqlMetadataRepository ..|> MetadataRepository

    ExpenseCoreService ..> ExpenseEntry